2005-02-19  Jay Belanger  <belanger@truman.edu>

	* calc/calc-math.el (calc-arctan, calc-tanh, calc-arctanh):
	Removed extra definitions.
	(calc-coth): New function.
	(calcFunc-cot): Fix `let'.

2005-02-19  Eli Zaretskii  <eliz@gnu.org>

	* faces.el (escape-glyph, minibuffer-prompt): Add commentary for
	the reasons we use "type pc" in these faces.

	* button.el (button): Ditto.

2005-02-19  Michael Mauger  <mmaug@yahoo.com>

	* replace.el (query-replace-read-from): Set the value of
	query-replace-from-history-variable to handle the case of an empty
	string entered to accept the suggested default.

	* net/tramp.el (tramp-file-name-for-operation): Use
	dired-call-process instead of dired-call-process-command.

2005-02-19  Jay Belanger  <belanger@truman.edu>

	* calc/calc-arith.el (math-trig-inverses, math-div-trig)
	(math-div-non-trig): New variables.
	(math-combine-prod-trig, math-div-new-trig, math-div-new-non-trig)
	(math-div-isolate-trig, math-div-isolate-trig-term): New functions.
	(math-combine-prod, math-div-symb-fancy): Add simplifications for
	trig expressions.

2005-02-19  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-var-update-handler)
	(gdb-speedbar-timer-fn): Ensure speedbar updates with new values
	for watch expressions,
	(gdb-var-create-handler): Don't set speedbar-update-flag.
	(gdb-post-prompt): Simplify test for speedbar.

2005-02-19  Michael Kifer  <kifer@cs.stonybrook.edu>
	
	* ediff.el (ediff-set-diff-overlays-in-one-buffer,
	ediff-set-fine-overlays-in-one-buffer,ediff-goto-word) make sure
	we use the syntax table of the correct buffer.
	(ediff-same-file-contents,ediff-same-contents): enhancements thanks to
	Felix Gatzemeier.
	
	* ediff-init.el (ediff-hide-face): checks for definedness of functions.
	(ediff-file-remote-p): make synonymous with file-remote-p.
	In all deffaces ediff-*-face-*, use min-colors.
	
	* ediff-mult.el (ediff-meta-mark-equal-files): make use of
        ediff-recurse-to-subdirectories.