@@ -1,3 +1,8 @@
+2005-02-19  David Kastrup  <dak@gnu.org>
+
+	* subr.el (subregexp-context-p): Fix garbled doc string by adding
+	quoting.
+
 2005-02-19  Jay Belanger  <belanger@truman.edu>
 
 	* calc/calc-math.el (calc-arctan, calc-tanh, calc-arctanh):
